--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,16 +23,33 @@
     <string name="in_3_days">In 3 Days</string>
     <string name="in_7_days">In 7 Days</string>
     <string name="this_month">This Month</string>
-    <string name="expenses">expenses</string>
-    <string name="add_expense">add_expenses</string>
-    <string name="category">Category</string>
+    <string name="expenses">Expenses</string>
+    <string name="add_expense">Add Expense</string>
     <string name="amount">Amount</string>
-    <string name="date">Date</string>
-    <string name="receipt_photo">Receipt Photo</string>
+    <string name="category">Category</string>
     <string name="save_expense">Save Expense</string>
-    <string name="members">Members</string>
-    <string name="packages">Packages</string>
-    <string name="expiry">Expiry</string>
-
-
+    <string name="equipment">Equipment</string>
+    <string name="add_equipment">Add Equipment</string>
+    <string name="equipment_name">Equipment Name</string>
+    <string name="quantity">Quantity</string>
+    <string name="condition">Condition</string>
+    <string name="save_equipment">Save Equipment</string>
+    <string name="trainers">Trainers</string>
+    <string name="add_trainer">Add Trainer</string>
+    <string name="trainer_name">Trainer Name</string>
+    <string name="salary">Salary</string>
+    <string name="save_trainer">Save Trainer</string>
+    <string name="reports">Reports</string>
+    <string name="daily">Daily</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
+    <string name="yearly">Yearly</string>
+    <string name="income">Income</string>
+    <string name="profit_loss">Profit/Loss</string>
+    <string name="settings">Settings</string>
+    <string name="dark_theme">Dark Theme</string>
+    <string name="search_members">Search members</string>
+    <string name="edit_member">Edit Member</string>
+    <string name="delete_member">Delete Member</string>
+    <string name="back">Back</string>
 </resources>
